# dataset_platform

./: .gitignore  README.md  WSL2_WEB_DATASET_PLATFORM_PLAN.md  pyproject.toml
backend/: Dockerfile  alembic.ini
backend/app/: __init__.py  bootstrap.py  main.py
backend/app/api/: __init__.py
backend/app/auth/: __init__.py  dependencies.py  tokens.py
backend/app/db/: __init__.py  session.py
backend/app/jobs/: __init__.py  celery_app.py  export_task.py  tasks.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: __init__.py  dataset_service.py  history_service.py  purge_service.py
backend/app/settings/: __init__.py  config.py
backend/app/storage/: __init__.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_keypoints.py  0003_sample_class_index.py  0004_upload_idempotency.py  0005_operation_history.py  0006_bigint_byte_counts.py  0007_dataset_soft_delete.py
backend/tests/: test_export_task.py  test_health.py  test_import_worker.py  test_platform_api.py  test_purge_dataset.py
deploy/wsl2/: README.md  compose.yaml  env.example
deploy/wsl2-native/: README.md  env.example
docs/: IMPLEMENTATION_STATUS.md
docs/decisions/: 001-modular-monolith.md  002-normalized-annotations.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
src/dataset_core/: __init__.py
tests/: test_archive_formats.py  test_archive_parser.py  test_import_security.py  test_zip_scanner.py
(+27 files in other folders)
