[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-platform"
version = "0.1.0"
description = "WSL2-ready, cloud-portable dataset management platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "alembic>=1.13,<2.0",
  "pydantic-settings>=2.4,<3.0",
  "celery[redis]>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "minio>=7.2,<8.0",
  "python-multipart>=0.0.9,<1.0",
  "defusedxml>=0.7,<1.0",
  "py7zr>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.6"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["dataset_core*", "app*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "tests"]
pythonpath = ["src", "backend"]
addopts = "-ra --basetemp=.pytest-tmp"

[tool.ruff]
line-length = 100
target-version = "py312"





